getting maximum stack size exceeded error in burgerjs file

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
 	{{name}}
 
 	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-		{{#if devoured}}BURGER TIME!{{else}}Up next!{{/if}}
+		{{#if devoured}}Choose this burger!{{else}}Up next!{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
