--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-<background-image></background-image>
+
 <h1>Cure that burger craving!</h1>
 
 <h2>Burgers that are tasty!</h2>
@@ -40,6 +40,7 @@
   </div>
 
   <button type="submit">Submit</button>
-</form>>
+
+</form>
 
 </div>
