Updated burger.js file - hard coded lines 8-13

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -30,7 +30,7 @@
     font-weight: bold;
 }
 
-.background{
+body{
     background-image: url('../images/burgerpic.png');
     background-repeat: no-repeat;
     background-size: cover;
