--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
   <h1>Cure that burger craving!</h1>
 
-  <h2>Burgers that are tasty!</h2>
+  <h2>Make your selection below!</h2>
   <div class="col-3" id="burgers-list">
     <ul>
       {{#each burgers}}
@@ -25,6 +25,7 @@
     </ul>
   </div>
 
+<div class="col-3" id="add-burgers-list">
   <h2>Add Burgers</h2>
   <form class="create-form">
 
@@ -43,4 +44,5 @@
 
   </form>
 
+</div>
 </div>
